# ComfyUI-MetadataOverlay

./: __init__.py  pyproject.toml
docs/plans/: 2026-03-08-overlay-anchoring.md  2026-03-10-floating-overlay-sizing.md  2026-03-10-image-centering.md  2026-03-10-prompt-truncation.md  2026-03-10-toggle-fix.md  2026-03-11-metadata-overlay-navigation.md  2026-03-12-standalone-viewer.md
web/: metadata_overlay.js  metadata_overlay_shared.js  metadata_overlay_viewer.js
